--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
             "email": "funkylen@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "bin": [
+        "bin/gendiff"
+    ]
 }
