--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "Second Hexlet project",
     "type": "project",
     "autoload": {
-        "psr-4": {
-            "Hexlet\\Code\\": "src/"
-        }
+        "files": [
+            "src/Cli.php"
+        ]
     },
     "authors": [
         {
