--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: Test 
 on: [push]
 jobs:
-  Lint-With-PhpCS:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: nick-zh/composer@php7.4
-      - name: run lint
+      - name: run tests 
         run: make test 
