--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
 name: Lint
 on: [push]
 jobs:
-  Lint-With-PhpCS:
+  PSR-12:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
