[4] Edit action names

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test 
 on: [push]
 jobs:
-  phpunit:
+  test-phpunit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
