--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "files": [
             "src/Cli.php",
             "src/Differ.php",
-            "src/DifferTypes.php",
+            "src/DiffBuilder.php",
+            "src/DiffStringGenerator.php",
             "src/Parsers/Json.php",
             "src/Parsers/Yaml.php"
         ]
