[7] Start work on plain formatter

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
             "src/Formatter.php",
             "src/Parsers/Json.php",
             "src/Parsers/Yaml.php",
-            "src/Formatters/Stylish.php"
+            "src/Formatters/Stylish.php",
+            "src/Formatters/Plain.php"
         ]
     },
     "authors": [
