[8] Add json formatter

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
             "src/Parsers/Json.php",
             "src/Parsers/Yaml.php",
             "src/Formatters/Stylish.php",
-            "src/Formatters/Plain.php"
+            "src/Formatters/Plain.php",
+            "src/Formatters/Json.php"
         ]
     },
     "authors": [
