--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
             "src/Parsers/Yaml.php",
             "src/Formatters/Stylish.php",
             "src/Formatters/Plain.php",
-            "src/Formatters/Json.php"
+            "src/Formatters/Json.php",
+            "src/FileReader.php"
         ]
     },
     "authors": [
