--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
             "src/Formatters/Stylish/Formatter.php",
             "src/Formatters/Stylish/Node.php",
             "src/Formatters/Stylish/Tree.php",
+            "src/Formatters/Plain/Formatter.php",
+            "src/Formatters/Plain/Node.php",
+            "src/Formatters/Plain/Tree.php",
             "src/Formatters/Plain.php",
             "src/Formatters/Json.php",
             "src/FileReader.php"
