--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
             "src/Formatters/Plain/Formatter.php",
             "src/Formatters/Plain/Node.php",
             "src/Formatters/Plain/Tree.php",
-            "src/Formatters/Json.php",
-            "src/FileReader.php"
+            "src/Formatters/Json/Formatter.php",
+            "src/Parser.php"
         ]
     },
     "authors": [
