--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "require": {
         "docopt/docopt": "^1.0",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/yaml": "^5.3"
+        "symfony/yaml": "^5.3",
+        "lstrojny/functional-php": "^1.17"
     },
     "bin": [
         "bin/gendiff"
