--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,7 @@
         "files": [
             "src/Cli.php",
             "src/Differ.php",
-            "src/Parser.php",
-            "src/Parsers/Json.php",
-            "src/Parsers/Yaml.php",
+            "src/Parsers.php",
             "src/Formatter.php",
             "src/Formatters/Stylish/Formatter.php",
             "src/Formatters/Stylish/Node.php",
