--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,13 @@
     "autoload": {
         "files": [
             "src/Cli.php",
+            "src/Diff.php",
             "src/Differ.php",
             "src/Parsers.php",
             "src/Formatter.php",
             "src/Formatters/Stylish.php",
             "src/Formatters/Json.php",
-            "src/Formatters/Plain.php",
-            "src/Diff/Node.php",
-            "src/Diff/Tree.php"
+            "src/Formatters/Plain.php"
         ]
     },
     "authors": [
